// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrNodeContainerItem getMapping should override undefined container item 1`] = `
<DocumentFragment>
  <div>
    <a />
  </div>
</DocumentFragment>
`;

exports[`BrNodeContainerItem getMapping should render undefined container item 1`] = `
<DocumentFragment>
  <div>
    Component "undefined" is not defined.
  </div>
</DocumentFragment>
`;
